--- a/config.toml
+++ b/config.toml
@@ -16,8 +16,8 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
     keywords = "phugo, hugo, photogallery, photoblog, hugo theme"
     #msvalidate = ""
     #googlesiteverification = ""
-    #thumb_width = 480
-    #thumb_quality = 50
+    #thumb_width = 580
+    #thumb_quality = 60
     #full_width = 960
     #full_quality = 90
     
@@ -33,7 +33,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
     # Footer panel
     
     [params.footer.paragraph]
-    headline = "Magna feugiat sed adipiscing"
+    headline = "Walt Lomax"
     text = "Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum."
     
     [params.footer.social]
@@ -80,7 +80,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
     
     [params.footer.contact]
     hide = false # Set this to true if you don't want to have a contact form on your site
-    realEmail = "example@example.org"
+    realEmail = "waltlomax@gmail.com"
     headline = "Get in touch"
     buttonText = "Send"
     resetText = "Reset"
